Add method for set home coordinates
